--- a/Forecasting_Airlines_Passenger_Data.ipynb
+++ b/Forecasting_Airlines_Passenger_Data.ipynb
@@ -15,7 +15,7 @@
       "source": [
         "Forecast the Airlines Passengers data set. \n",
         "\n",
-        "Prepare a document for each model explaining how many dummy variables you have created and RMSE value for each model. \n",
+        "Prepare a document for each model explaining how many dummy variables you have created and MAE value for each model. \n",
         "\n",
         "Finally which model you will use for \n",
         "Forecasting.\n"
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "id": "c0fa0de6",
       "metadata": {
         "id": "c0fa0de6"
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "id": "d532053e",
       "metadata": {
         "colab": {
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": null,
       "id": "8c0046d6",
       "metadata": {
         "colab": {
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "id": "9298f379",
       "metadata": {
         "colab": {
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "id": "45edd7ba",
       "metadata": {
         "colab": {
@@ -456,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "id": "1b5d6bb1",
       "metadata": {
         "id": "1b5d6bb1"
@@ -469,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "id": "56f64765",
       "metadata": {
         "colab": {
@@ -643,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "id": "fd83f7a1",
       "metadata": {
         "colab": {
@@ -716,7 +716,7 @@
         "outputId": "cca6727d-7ec4-44f5-ddfc-d36bf1867701"
       },
       "id": "a39H51gQMrIa",
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -757,7 +757,7 @@
         "outputId": "70dc92bb-1e22-4ebd-ec84-42205336f1c2"
       },
       "id": "nwp9kJ5SM7nn",
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -808,7 +808,7 @@
         "outputId": "27529fc5-5e75-40e6-c47b-7916425d6e17"
       },
       "id": "WJFE4YFhNRY3",
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -849,7 +849,7 @@
         "outputId": "a107482c-363b-4ab2-f016-0b5d6f742381"
       },
       "id": "mufCsAl0N1Mg",
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1018,7 @@
         "outputId": "4f0c51ec-c66b-4a36-a78d-55001daa77ef"
       },
       "id": "0vymI8PGNraA",
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1208,7 +1208,7 @@
         "outputId": "ee29ed58-f5e5-4f9b-ab6f-f5e1c9eceb41"
       },
       "id": "3wzlBZbSOIeF",
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1273,7 +1273,7 @@
         "outputId": "e8a55ce1-3589-472e-8865-e8d7116e043d"
       },
       "id": "bVGygaAYOfx9",
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1324,7 +1324,7 @@
         "outputId": "1a3bd5eb-ce75-4251-9f9f-0523d2eea013"
       },
       "id": "A2_FieYEQBVV",
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1378,7 +1378,7 @@
         "id": "ZJCNPvDMi-J-",
         "outputId": "38de8292-4633-40f8-b648-001d03218d03"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1430,7 +1430,7 @@
         "id": "hiKiw4dTjKwv",
         "outputId": "82a7a203-0098-46f5-e670-37f3bdafd483"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1472,7 +1472,7 @@
         "outputId": "8ef24b95-6504-490f-f925-d4ca8f794880"
       },
       "id": "hBXHyN92RTc-",
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1512,7 +1512,7 @@
         "outputId": "ab71a188-0473-4af8-83e3-98b908f2deb8"
       },
       "id": "qG54DM14Rj-k",
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1561,7 +1561,7 @@
         "outputId": "5e78e0fb-f63b-439c-c661-3d183ef19b21"
       },
       "id": "T5Pp9jPUSsC7",
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1589,7 +1589,7 @@
         "outputId": "0bc0d1a7-806b-4ba2-85f1-d2186a5f6c31"
       },
       "id": "I28ctje6S0OF",
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1816,7 +1816,7 @@
         "outputId": "753b4012-daa5-452a-ecc7-1527ba0cc59d"
       },
       "id": "xdb31v4QUuzb",
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1847,7 +1847,7 @@
         "id": "EqRdKdTKUz2k"
       },
       "id": "EqRdKdTKUz2k",
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1863,7 +1863,7 @@
         "outputId": "5e9431bf-23cc-45ee-fccc-e9f6e9268c85"
       },
       "id": "wOGH47AcVYEc",
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1910,7 +1910,7 @@
         "outputId": "005c4d52-df34-469b-b039-b7431b8f127f"
       },
       "id": "fPgmWeQ1TuOb",
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2291,7 +2291,7 @@
         "id": "3SyCopHU_KB_"
       },
       "id": "3SyCopHU_KB_",
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2309,7 +2309,7 @@
         "outputId": "da7228f2-836e-4592-9a18-e83282b89cf9"
       },
       "id": "j20mLjQI_b0E",
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2349,7 +2349,7 @@
         "outputId": "4ef6a4ac-2aec-43ef-b5f6-7e5136649640"
       },
       "id": "vRz6VMYJASK0",
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2384,7 +2384,7 @@
         "id": "oPDL9YtTC2oN"
       },
       "id": "oPDL9YtTC2oN",
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2396,7 +2396,7 @@
         "id": "aM7oHiCxWkqY"
       },
       "id": "aM7oHiCxWkqY",
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2408,7 +2408,7 @@
         "id": "A2w5xFvBAZja"
       },
       "id": "A2w5xFvBAZja",
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2425,7 +2425,7 @@
         "outputId": "dacf3ce8-de44-451c-fb28-5bab962ccb5e"
       },
       "id": "Xmh7U0eH_XBX",
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2706,7 +2706,7 @@
         "id": "WngOVCnFSn2u"
       },
       "id": "WngOVCnFSn2u",
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2730,7 +2730,7 @@
         "id": "y7rKSgr0nyum"
       },
       "id": "y7rKSgr0nyum",
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2752,7 +2752,7 @@
         "outputId": "5fdaff44-3be5-4e8a-99c5-b8511387704c"
       },
       "id": "nmlL0HjxWRoe",
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2784,7 +2784,7 @@
         "outputId": "caf8fe46-abc9-45cd-d237-6324723602bc"
       },
       "id": "wiVntFHjVu2a",
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2816,7 +2816,7 @@
         "outputId": "94152be4-f014-4d09-c926-edb5e58f76b2"
       },
       "id": "b9CG1Al6Vuwi",
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2848,7 +2848,7 @@
         "outputId": "6d041d06-ab10-4858-b6c2-b31bb1169c65"
       },
       "id": "zppSLBOKVuqw",
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2880,7 +2880,7 @@
         "outputId": "e18be911-e692-42d6-8064-6a094b2d449d"
       },
       "id": "crbp1lYVVukV",
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2912,7 +2912,7 @@
         "outputId": "b8fa594d-13f4-476b-eca7-272bdaee8a84"
       },
       "id": "zXX6xeSnVueo",
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2944,7 +2944,7 @@
         "outputId": "4f8b4709-ecdf-4640-cb52-f210c1c6d2b1"
       },
       "id": "PPO-SZ9pVuX3",
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2980,7 +2980,7 @@
         "id": "SaeIookriR2T"
       },
       "id": "SaeIookriR2T",
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2997,7 +2997,7 @@
         "outputId": "41f3ca21-42eb-4a8e-dd23-e3b0de528dc9"
       },
       "id": "tCRxqni1oJZH",
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3170,7 +3170,7 @@
         "id": "DEGnlnP0iy-F"
       },
       "id": "DEGnlnP0iy-F",
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3199,7 +3199,7 @@
         "outputId": "67e41595-5334-4fa2-95c3-87abd6605a39"
       },
       "id": "Nf8AZcTvkhsT",
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3240,7 +3240,7 @@
         "outputId": "d24cc903-4d6a-45ee-cf68-5ec30a997bca"
       },
       "id": "QwnLBbKhkvfg",
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3280,7 +3280,7 @@
         "outputId": "2cb22420-1fc0-4b31-8efa-f7776d4a039d"
       },
       "id": "KD-4WueylHMd",
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3320,7 +3320,7 @@
         "outputId": "2a809160-e3ff-4549-916e-47e54366ebf9"
       },
       "id": "zMWsM12zlXDd",
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3356,7 +3356,7 @@
         "id": "lbyZp03vWKnH"
       },
       "id": "lbyZp03vWKnH",
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3373,7 +3373,7 @@
         "outputId": "13adafab-a820-44f4-c1cd-71ac3821ad9c"
       },
       "id": "4pht_wJJWa4B",
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3539,7 +3539,7 @@
         "outputId": "1d6f136e-db10-43d8-e23f-162adedf185a"
       },
       "id": "GRX1k_FvWax3",
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3576,7 +3576,7 @@
         "id": "EJnuu7RJYThl"
       },
       "id": "EJnuu7RJYThl",
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3592,7 +3592,7 @@
         "outputId": "0d8b39ea-eee5-41d1-c93f-32aa99d762d6"
       },
       "id": "Lr9HQnHKeKbK",
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3631,7 +3631,7 @@
         "outputId": "62cc04a2-79b2-4534-b9f2-ea564360c260"
       },
       "id": "KbZl3Z09Wasa",
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3726,7 +3726,7 @@
         "id": "J4_izcUvWals"
       },
       "id": "J4_izcUvWals",
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3753,7 +3753,7 @@
         "id": "pEpEA7w6WagE"
       },
       "id": "pEpEA7w6WagE",
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3777,7 +3777,7 @@
         "outputId": "b186307c-9e1d-4de9-b3c4-8f95076749e5"
       },
       "id": "IbXqr3zAWaZ8",
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3896,7 +3896,7 @@
         "outputId": "c79c64c3-a6e2-4a5d-9a69-85132089a691"
       },
       "id": "oHVAK7YxqFL8",
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4124,7 +4124,7 @@
         "outputId": "4c282f08-e87c-47d2-9a54-ab4712db50fe"
       },
       "id": "hl0DiRdSgQks",
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4354,7 +4354,7 @@
         "id": "VGMUSiq1WaTQ"
       },
       "id": "VGMUSiq1WaTQ",
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4374,7 +4374,7 @@
         "outputId": "e35ab61b-109a-4736-b2d9-368d64d9da68"
       },
       "id": "lR5g2Rh2WaLN",
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4403,7 +4403,7 @@
         "outputId": "656c7d08-2fb4-45a3-f51f-26080bfe07e0"
       },
       "id": "3XxEbKGBhVdP",
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4444,7 +4444,7 @@
         "outputId": "2bc02ee7-6a3f-4119-ce24-c38a2a9a2670"
       },
       "id": "Oh4bf3V7WaAf",
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4475,7 +4475,7 @@
         },
         "outputId": "e51c06a1-1caf-472c-b2fe-cf5f8b2f3f84"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4706,7 +4706,7 @@
         "id": "GrRJYvwMkEwB"
       },
       "id": "GrRJYvwMkEwB",
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4718,7 +4718,7 @@
       "metadata": {
         "id": "KECbHV2ANCJM"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [],
       "id": "KECbHV2ANCJM"
     },
@@ -4737,7 +4737,7 @@
         },
         "outputId": "7876ccbc-c72b-425e-97fd-af660543f299"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4999,7 +4999,7 @@
         },
         "outputId": "e6748db6-6295-4e4e-f567-a73607abad6e"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5042,7 +5042,7 @@
       "metadata": {
         "id": "nCdoCx_yNBrg"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [],
       "id": "nCdoCx_yNBrg"
     },
@@ -5058,7 +5058,7 @@
         },
         "outputId": "200d3f31-b799-48fd-ee4d-2d6bac2f882b"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5101,7 +5101,7 @@
       "metadata": {
         "id": "kWaojoMJNBes"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [],
       "id": "kWaojoMJNBes"
     },
@@ -5119,7 +5119,7 @@
         "id": "JDz_i0zCJZpI",
         "outputId": "a2a5fbf6-a279-47d9-e5b4-ddaaf22b080f"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5158,7 +5158,7 @@
       "metadata": {
         "id": "JYWo0bKyKvb4"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": [],
       "id": "JYWo0bKyKvb4"
     },
@@ -5170,7 +5170,7 @@
       "metadata": {
         "id": "-9OcX7UHNyrX"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [],
       "id": "-9OcX7UHNyrX"
     },
@@ -5182,7 +5182,7 @@
       "metadata": {
         "id": "rOY5H_QQJZi3"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [],
       "id": "rOY5H_QQJZi3"
     },
@@ -5199,7 +5199,7 @@
         "id": "M9H5GZwpJZdV",
         "outputId": "577bb3c1-1b0a-4cb0-e5ec-82d817956286"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5474,7 +5474,7 @@
         "id": "QWRPnn6vcLVF",
         "outputId": "dfd38f0e-598e-4c2f-a52f-dcb4e888deef"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5772,7 +5772,7 @@
         },
         "outputId": "092edcb6-43e0-4f1d-e81b-eab8e41c2caa"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
